objects/Deal_State__c.object
<CustomObject>
    <description>Deal Related information. BDC Communication Project</description>
    <fields>
        <fullName>ADP_Opportunity_Owner_Manager__c</fullName>
        <formula>Opportunity__r.ADP_Opportunity_Owner__r.Manager.FirstName &amp; &quot; &quot; &amp; Opportunity__r.ADP_Opportunity_Owner__r.Manager.LastName</formula>
        <label>CDK Opportunity Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADP_Opportunity_Owner__c</fullName>
        <formula>Opportunity__r.ADP_Opportunity_Owner__r.FirstName &amp; &quot; &quot; &amp; Opportunity__r.ADP_Opportunity_Owner__r.LastName</formula>
        <label>CDK Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Key_Rep_Email__c</fullName>
        <label>Account Key Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Region__c</fullName>
        <formula>Text(Opportunity__r.Account.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_DocuSign_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alternate DocuSign Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deal State</relationshipLabel>
        <relationshipName>Deal_State</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Any_Other_Sites_Involved_With_Request__c</fullName>
        <label>Sites Involved With Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_PSE_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned PSE Engineer</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You can only add PSE user in Assigned PSE Engineer Field</errorMessage>
            <filterItems>
                <field>User.Department</field>
                <operation>equals</operation>
                <value>PSE</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Deal_State1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Review_Complete_Date_Time__c</fullName>
        <label>Billing Review Complete Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Billing_Review_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing Review Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CA_Approved_Date__c</fullName>
        <inlineHelpText>Central Time Zone (CST)</inlineHelpText>
        <label>CA Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CA_Approver_Email__c</fullName>
        <formula>If(TEXT(Opportunity__r.Account.Region__c)=&quot;Canada&quot; &amp;&amp; IPNS_Only__c=false &amp;&amp; Intravision_Only__c=false &amp;&amp; Dash_Only__c=false,&quot;HOF.ContractAdmin.CAN@cdk.com&quot;,
If(TEXT(Opportunity__r.Account.Region__c)=&quot;Enterprise&quot; &amp;&amp; IPNS_Only__c=false &amp;&amp; Intravision_Only__c=false &amp;&amp; Dash_Only__c=false,&quot;HOF.ContractAdmin.ENTPR@cdk.com&quot;,
If(TEXT(Opportunity__r.Account.Region__c)=&quot;National&quot; &amp;&amp; IPNS_Only__c=false &amp;&amp; Intravision_Only__c=false &amp;&amp; Dash_Only__c=false,&quot;HOF.ContractAdmin.NATL@cdk.com&quot;,
If(TEXT(Opportunity__r.Account.Region__c)=&quot;North&quot; &amp;&amp; IPNS_Only__c=false &amp;&amp; Intravision_Only__c=false &amp;&amp; Dash_Only__c=false,&quot;HOF.ContractAdmin.NE@cdk.com&quot;,
If(TEXT(Opportunity__r.Account.Region__c)=&quot;South&quot; &amp;&amp; IPNS_Only__c=false &amp;&amp; Intravision_Only__c=false &amp;&amp; Dash_Only__c=false,&quot;HOF.ContractAdmin.SE@cdk.com&quot;,
If(TEXT(Opportunity__r.Account.Region__c)=&quot;West&quot; &amp;&amp; IPNS_Only__c=false &amp;&amp; Intravision_Only__c=false &amp;&amp; Dash_Only__c=false,&quot;HOF.ContractAdmin.West@cdk.com&quot;,
If(TEXT(Opportunity__r.Account.Region__c)=&quot;PFW&quot; &amp;&amp; IPNS_Only__c=false &amp;&amp; Intravision_Only__c=false &amp;&amp; Dash_Only__c=false,&quot;ContractAdminPFW@cdk.com&quot;,
If(OR(TEXT(Opportunity__r.Account.Region__c)=&quot;Central North&quot;,TEXT(Opportunity__r.Account.Region__c)=&quot;Central South&quot;) &amp;&amp; IPNS_Only__c=false &amp;&amp; Intravision_Only__c=false &amp;&amp; Dash_Only__c=false,&quot;HOF.ContractAdmin.CENTRAL@cdk.com&quot;,
If(OR(TEXT(Opportunity__r.Account.Region__c)=&quot;Truck&quot;,TEXT(Opportunity__r.Account.Region__c)=&quot;Independent Truck Dealers&quot;) &amp;&amp; IPNS_Only__c=false &amp;&amp; Intravision_Only__c=false &amp;&amp; Dash_Only__c=false,&quot;HOF.ContractAdmin.Truck@cdk.com&quot;,
If(OR(TEXT(Opportunity__r.Account.Region__c)=&quot;Hoffman Sales&quot;,TEXT(Opportunity__r.Account.Region__c)=&quot;NIADA&quot;,Dash_Only__c=true) &amp;&amp; IPNS_Only__c=false &amp;&amp; Intravision_Only__c=false,&quot;Hof.ContractAdmin.DASH@cdk.com&quot;,
If(IPNS_Only__c=true,&quot;HOF.ContractAdmin.IPNS@cdk.com&quot;,
If(Intravision_Only__c=true,&quot;HOF.ContractAdmin.INTVISION@cdk.com&quot;,
&quot;&quot;))))))))))))</formula>
        <label>CA Approver Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Approver__c</fullName>
        <label>CA Approver</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDK_Opportunity_Owner_Email__c</fullName>
        <label>CDK Opportunity Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CMF__c</fullName>
        <label>CMF</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRA_Signed_Date__c</fullName>
        <inlineHelpText>Central Time Zone (CST)</inlineHelpText>
        <label>CRA Signed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRA_Signer__c</fullName>
        <label>CRA Signer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Sol. Design still required</inlineHelpText>
        <label>CRM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cash_Credit__c</fullName>
        <label>Cash/Credit</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_1_Delivered_Date__c</fullName>
        <inlineHelpText>Central Time Zone (CST)</inlineHelpText>
        <label>Client 1 Delivered Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Client_1_Sign_In_Person__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client 1 Sign In Person</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_2_Delivered_Date__c</fullName>
        <inlineHelpText>Central Time Zone (CST)</inlineHelpText>
        <label>Client 2 Delivered Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Client_2_Sign_In_Person__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client 2 Sign In Person</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_2_Signed_Date__c</fullName>
        <inlineHelpText>Central Time Zone (CST)</inlineHelpText>
        <label>Client 2 Signed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Client_Data_Exchange_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Data Exchange Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Signed_Date__c</fullName>
        <inlineHelpText>Central Time Zone (CST)</inlineHelpText>
        <label>Client 1 Signed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Client_Signer_1_Del__c</fullName>
        <formula>Opportunity__r.Client_Signer_1__r.Full_Name__c</formula>
        <label>Client Signer 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Signer_1_Role__c</fullName>
        <label>Client Signer 1 Role</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Signer_1__c</fullName>
        <label>Client Signer 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Signer_2_Del__c</fullName>
        <formula>Opportunity__r.Client_Signer_2__r.Full_Name__c</formula>
        <label>Client Signer 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Signer_2_Role__c</fullName>
        <label>Client Signer 2 Role</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Signer_2__c</fullName>
        <label>Client Signer 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Needed_By_Date__c</fullName>
        <label>Contract Needed By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Number_s__c</fullName>
        <label>Contract Number(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_term_in_months__c</fullName>
        <label>Contract term (in months)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Controller_Email__c</fullName>
        <label>Controller Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Core_CMF_Number__c</fullName>
        <label>Core CMF Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Chatter_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created By Chatter Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <description>Created to get only created by First Name and Last Name</description>
        <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp;  CreatedBy.LastName</formula>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DCS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DCS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dash_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dash Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_Approver__c</fullName>
        <label>Deal Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Description__c</fullName>
        <label>Deal Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deal_From_Solution_Design__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deal From Solution Design</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_Requested_Date__c</fullName>
        <label>Deal Requested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deal_State_Link__c</fullName>
        <formula>hyperlink(&quot;https://adpdealerservices.my.salesforce.com/&quot;&amp; Id, &quot;Deal State Link&quot;,&quot;_blank&quot;)</formula>
        <label>Deal State Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_State_Secured_Id__c</fullName>
        <label>Deal State Secured Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_State_Secured_Link__c</fullName>
        <formula>hyperlink(&quot;https://adpdealerservices.my.salesforce.com/&quot;&amp; Deal_State_Secured_Id__c, &quot;Deal State Secured Link&quot;,&quot;_blank&quot;)</formula>
        <label>Deal State Secured Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Status__c</fullName>
        <label>Deal Status</label>
        <picklist>
            <picklistValues>
                <fullName>New Deal Arrived</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Rep Created SQT Deal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned - SCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Networking Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Networking Quote Uploaded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending SOW Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOW Deal Change Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Released To Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Sales Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval in SQT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed by All Parties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Deal Change Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finalized Deal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send To CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send To Countersign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send To CRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Envelope Voided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent To Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent To Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <label>Deal Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Group__c</fullName>
        <label>Dealer Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_of_Need__c</fullName>
        <label>Description of Item(s) Needed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discount_Monthlies__c</fullName>
        <label>Discount % Monthlies</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_One_Times__c</fullName>
        <label>Discount % One-Times</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docs_Pushed_from_SQT__c</fullName>
        <inlineHelpText>Last Time SQT Docs were pushed to SalesForce</inlineHelpText>
        <label>Docs Pushed from SQT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Docusign_Create_Envelope_URL__c</fullName>
        <label>Docusign Create Envelope URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Docusign_Envelope_Status__c</fullName>
        <description>Created to populate Docusign Envelope Status via Custom Deal State Connect Object in DocuSign</description>
        <label>Docusign Envelope Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Envelope_Sender_Email__c</fullName>
        <label>Envelope Sender Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Exception_Contract_Push__c</fullName>
        <inlineHelpText>Initials to be Filled by CA when filling Contract#&apos;s</inlineHelpText>
        <label>Exception Contract # Push</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Item_s_this_is_replacing__c</fullName>
        <formula>Opportunity__r.Existing_Item_s_this_is_replacing__c</formula>
        <label>Existing Item(s) this is replacing?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finalized_Deal_Deal_Requested__c</fullName>
        <formula>TEXT(
FLOOR(Finalized_Deal__c- Deal_Requested_Date__c)
) &amp; &quot; Day(s), &quot; &amp;
TEXT(
ROUND(MOD((Finalized_Deal__c- Deal_Requested_Date__c )*24,24),0)
) &amp;&quot; Hour(s), &quot; &amp;
TEXT(
ROUND(MOD((Finalized_Deal__c- Deal_Requested_Date__c )*1440,60),0)
) &amp;&quot; Minute(s) &quot;</formula>
        <label>Finalized Deal - Deal Requested</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finalized_Deal__c</fullName>
        <label>Finalized Deal</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_NW_Quote_Uploaded_Date_Time__c</fullName>
        <label>First NW Quote Uploaded Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flash_Config_2__c</fullName>
        <label>Flash Config # 2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flash_Config__c</fullName>
        <label>Flash Config #</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>French_Wording__c</fullName>
        <defaultValue>false</defaultValue>
        <label>French Wording</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Front_Office_Edge_Data_Consent_Signer2__c</fullName>
        <label>Front Office Edge Data Consent (Signer2)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Front_Office_Edge_Data_Consent__c</fullName>
        <label>Front Office Edge Data Consent</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fully_Approved__c</fullName>
        <label>Fully Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IPNS_CMF_Number__c</fullName>
        <label>IPNS CMF Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPNS_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IPNS Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPNS_Site_Address__c</fullName>
        <label>IPNS Site Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPNS_Site_City__c</fullName>
        <label>IPNS Site City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPNS_Site_Name__c</fullName>
        <label>IPNS Site Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPNS_Site_State__c</fullName>
        <label>IPNS Site State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPNS_Site_Zip__c</fullName>
        <label>IPNS Site Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impact_Project_Number__c</fullName>
        <label>Impact Project Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Contact_Name_Number__c</fullName>
        <label>Install Contact Name/Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intravision_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intravision Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_product_replacing_an_existing_item__c</fullName>
        <formula>TEXT(Opportunity__r.Is_any_item_product_that_is_being_sold__c)</formula>
        <label>Is product replacing an existing item?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_DOS_Email__c</fullName>
        <label>Key DOS Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Key_DOS__c</fullName>
        <formula>Opportunity__r.Account.Key_DOS__r.FirstName&amp;&quot; &quot;&amp;Opportunity__r.Account.Key_DOS__r.LastName</formula>
        <label>Key DOS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Rep__c</fullName>
        <formula>Opportunity__r.Account.Key_Rep__r.FirstName&amp;&quot; &quot;&amp;Opportunity__r.Account.Key_Rep__r.LastName</formula>
        <label>Key Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Updated_By__c</fullName>
        <label>Last Updated By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Updated_Date_Time__c</fullName>
        <label>Last Updated Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lease_Type__c</fullName>
        <label>Lease Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_Counter_Signer_Date__c</fullName>
        <inlineHelpText>Central Time Zone (CST)</inlineHelpText>
        <label>Legal Counter Signer Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legal_Counter_Signer__c</fullName>
        <label>Legal Counter Signer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Site_Address__c</fullName>
        <label>Main Site Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Site_City__c</fullName>
        <label>Main Site City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Site_Name__c</fullName>
        <label>Main Site Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Site_State__c</fullName>
        <label>Main Site State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Site_Zip__c</fullName>
        <label>Main Site Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Menu_Data_Consent_Signer2__c</fullName>
        <label>Menu Data Consent (Signer2)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Menu_Data_Consent__c</fullName>
        <label>Menu Data Consent</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NIADA_Region_Location__c</fullName>
        <label>NIADA Region Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Needed__c</fullName>
        <label>Network Needed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Network_Telephony__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Network/Telephony</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Car_IQ_Data_Consent_Signer2__c</fullName>
        <label>New Car IQ Data Consent (Signer2)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Car_IQ_Data_Consent__c</fullName>
        <label>New Car IQ Data Consent</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Refundable_Deposit_IPNS__c</fullName>
        <label>Non-Refundable Deposit IPNS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Refundable_Deposit__c</fullName>
        <label>Non-Refundable Deposit Core</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Entered on behalf of a User</inlineHelpText>
        <label>On Behalf Of</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deal_State2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Link__c</fullName>
        <formula>hyperlink(&quot;https://adpdealerservices.my.salesforce.com/&quot;&amp; Opportunity__r.Id, &quot;Opportunity Link&quot;,&quot;_blank&quot;)</formula>
        <label>Opportunity Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type__c</fullName>
        <formula>Opportunity__r.RecordType.Name</formula>
        <label>Opportunity Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage_Name__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <formula>TEXT(Opportunity__r.Type)</formula>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Deal State</relationshipLabel>
        <relationshipName>Deal_State</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Change_Notes__c</fullName>
        <label>Owner Change Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>Owner:User.FirstName&amp;&quot; &quot;&amp;Owner:User.LastName</formula>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSE_Quote_s_Received_Date__c</fullName>
        <label>PSE Quote(s) Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSE_Revision__c</fullName>
        <label>PSE Revision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSE_Status__c</fullName>
        <label>PSE Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Changes Requested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Process_Core_Deposit_Check_Using_Chax__c</fullName>
        <label>Process Core Deposit Check Using Chax?</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_IPNS_Deposit_Check_Using_Chax__c</fullName>
        <label>Process IPNS Deposit Check Using Chax?</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Highway_Routing__c</fullName>
        <description>Changing the field type as mentioned in RQ-04125</description>
        <label>Project Highway Routing</label>
        <picklist>
            <picklistValues>
                <fullName>FSO Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSE Lane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCS Lane</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quantity_of_Sites__c</fullName>
        <label>Number of Sites</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RTS_Deal_Requested__c</fullName>
        <formula>TEXT(
FLOOR(Released_to_Sales__c - Deal_Requested_Date__c)
) &amp; &quot; Day(s), &quot; &amp;
TEXT(
ROUND(MOD((Released_to_Sales__c - Deal_Requested_Date__c)*24,24),0)
) &amp;&quot; Hour(s), &quot; &amp;
TEXT(
ROUND(MOD((Released_to_Sales__c - Deal_Requested_Date__c)*1440,60),0)
) &amp;&quot; Minute(s) &quot;</formula>
        <label>RTS - Deal Requested</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Received_ServiceEdge_Doc_Date__c</fullName>
        <label>Received ServiceEdge Doc Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Received_ServiceEdge_Doc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received ServiceEdge Doc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Released_to_Sales__c</fullName>
        <label>Released to Sales</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reprioritized_Needed_By_Date__c</fullName>
        <label>Reprioritized Needed By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Roll_Call_Date__c</fullName>
        <label>Roll Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rush_Reasons__c</fullName>
        <label>Rush Reasons</label>
        <picklist>
            <picklistValues>
                <fullName>Client Needs ASAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales On Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installers On Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per VP/RGM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client is Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Project</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rush__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rush</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCS_Approved_Date__c</fullName>
        <inlineHelpText>Central Time Zone (CST)</inlineHelpText>
        <label>SCS Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SCS_Approver__c</fullName>
        <label>SCS Approver</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SQT_Created_By__c</fullName>
        <label>SQT Created By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SQT_Created_Date_Time__c</fullName>
        <label>SQT Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SQT_Deal_ID__c</fullName>
        <label>SQT Deal ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SQT_Deal_Link__c</fullName>
        <formula>hyperlink(&quot;http://&quot; &amp; $Setup.CustomSettings__c.SQTServer__c &amp; &quot;Home.aspx?DealID=&quot; &amp; SQT_Deal_ID__c &amp; &quot;&amp;UID=&quot; &amp; $User.Id, SQT_Deal_ID__c,&quot;_blank&quot;)</formula>
        <label>SQT Deal Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SQT_Deal_Requested__c</fullName>
        <formula>TEXT(
FLOOR(SQT_Created_Date_Time__c- Deal_Requested_Date__c)
) &amp; &quot; Day(s), &quot; &amp;
TEXT(
ROUND(MOD((SQT_Created_Date_Time__c- Deal_Requested_Date__c)*24,24),0)
) &amp;&quot; Hour(s), &quot; &amp;
TEXT(
ROUND(MOD((SQT_Created_Date_Time__c- Deal_Requested_Date__c)*1440,60),0)
) &amp;&quot; Minute(s) &quot;</formula>
        <label>SQT - Deal Requested</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SQT_Deal_Version_Number__c</fullName>
        <label>SQT Deal Version Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>